--- a/public/scss/_terra-www.scss
+++ b/public/scss/_terra-www.scss
@@ -16,6 +16,10 @@
     transform-origin: $transforms;
 }
 
+.side-nav {
+    scroll: auto;
+}
+
 .ter-navbar--terra {
     z-index: 901;
 }
